objects/Phonenumber__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here&apos;s a contact that uses this god dam phonenumber</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incidence__c</fullName>
        <label>Incidence</label>
        <summaryForeignKey>Phone2PersonRelationship__c.Phonenumber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>here&apos;s a lead with this dagum number</description>
        <inlineHelpText>here&apos;s a lead that uses this phonenumber</inlineHelpText>
        <label>Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Lead.IsConverted</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Lead.Status</field>
                <operation>notEqual</operation>
                <value>Qualified</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Phone_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Calls__c</fullName>
        <label>Total Calls</label>
        <summarizedField>Phone2PersonRelationship__c.Dials__c</summarizedField>
        <summaryForeignKey>Phone2PersonRelationship__c.Phonenumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type, equal to the field name where the number is found</description>
        <inlineHelpText>if lead related, Home, Mobile, Other
if contact related, Home, Mobile, Work, Other
IF contact &amp; homephone, account phone will be set to number</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>y__c</fullName>
        <defaultValue>1</defaultValue>
        <description>count unique phone number records in calculations later. (Can&apos;t delete field right now so it&apos;s this)</description>
        <inlineHelpText>Count of the tasks logged with this number as the DNIS</inlineHelpText>
        <label>y</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Phone Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Calls__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Incidence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Disconnected_Numbers</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Total_Calls__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Disconnected Number</value>
        </filters>
        <label>Disconnected Numbers</label>
    </listViews>
    <listViews>
        <fullName>Verified_Numbers</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Total_Calls__c</columns>
        <columns>Status__c</columns>
        <columns>Incidence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Verified</value>
        </filters>
        <label>Verified Numbers</label>
    </listViews>
    <listViews>
        <fullName>Wrong_Numbers</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Total_Calls__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Wrong Number</value>
        </filters>
        <label>Wrong Numbers</label>
    </listViews>
    <nameField>
        <label>Phone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>